# te-charnet

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yaml  pyproject.toml
config/: default.yaml
scripts/: 00_preprocess.py  01_segment_scenes.py  01a_extract_annotations.py  01b_fill_speakers.py  02_build_network.py  03_analyze.py  04_visualize.py  prototype_align_community.py  run_pipeline.py  run_s6.py
src/charnet/: __init__.py  community_align.py  io.py  metrics.py  models.py  network.py  pipeline_config.yaml  scene_segment.py  speaker_fill.py  transcript_align.py  viz.py
tests/: conftest.py  test_community_align.py  test_io.py  test_map_speaker_from_community.py  test_metrics.py  test_network.py  test_scene_segment.py
