[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charnet"
version = "0.1.0"
description = "Time-Evolved Character Interaction Network from Transcripts & Scene Detection"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "click>=8.1",
]

[project.optional-dependencies]
community = ["python-louvain>=0.16"]
interactive = ["pyvis>=0.3"]
cli = []
dev = ["pytest>=7.0", "ruff>=0.4"]
all = ["python-louvain>=0.16", "pyvis>=0.3", "pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
